# WhisperFlaskRealTime

./: README.md  app.py  pyproject.toml
static/: const_recorder_sender.js  main.js
templates/: index.html
